--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "proxy": "http://server:4000",
   "dependencies": {
-    "axios": "^0.18.0",
+    "@artsy/fresnel": "^6.1.0",
+    "axios": "^1.4.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-intersection-observer": "^9.4.3",
+    "react-scripts": "1.1.4",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
